# type-systems

./: README.md  default.nix  shell.nix  type-system.cabal
src/: Ast.hs  Error.hs  Fragment.hs  Rules.hs  Util.hs
src/Ast/: Error.hs  Kind.hs  Pattern.hs  Term.hs  Type.hs  Warning.hs
src/Ast/Error/: Common.hs
src/Ast/Error/Common/: Kind.hs  Type.hs
src/Ast/Kind/: Var.hs
src/Ast/Term/: Var.hs
src/Ast/Type/: Var.hs
src/Context/: Term.hs  Type.hs
src/Context/Term/: Error.hs
src/Context/Type/: Error.hs
src/Data/: Bitransversable.hs
src/Data/Functor/: Rec.hs
src/Fragment/: Annotation.hs  Ast.hs  Ast2.hs  Bool.hs  Case.hs  Fix.hs  HM.hs  If.hs  Int.hs  IsoRec.hs  KiArr.hs  KiBase.hs  LC.hs  Let.hs  Pair.hs  PtVar.hs  PtWild.hs  Record.hs  STLC.hs  SystemF.hs  SystemFw.hs  TmApp.hs  TmLam.hs  TmVar.hs  Tuple.hs  TyAll.hs  TyArr.hs  TyVar.hs  Var.hs  Variant.hs
src/Fragment/Annotation/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Annotation/Ast/: Term.hs
src/Fragment/Annotation/Rules/: Term.hs
src/Fragment/Bool/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Bool/Ast/: Pattern.hs  Term.hs  Type.hs
src/Fragment/Bool/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Fragment/Bool/Rules/Infer/: SyntaxDirected.hs
src/Fragment/Case/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Case/Ast/: Error.hs  Term.hs  Warning.hs
src/Fragment/Case/Rules/: Eval.hs  Infer.hs  Term.hs
src/Fragment/Case/Rules/Infer/: SyntaxDirected.hs
src/Fragment/Fix/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Fix/Ast/: Term.hs
src/Fragment/Fix/Rules/: Term.hs
src/Fragment/HM/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/HM/Ast/: Error.hs  Term.hs  Type.hs
src/Fragment/HM/Rules/: Eval.hs  Term.hs  Type.hs
src/Fragment/If/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/If/Ast/: Term.hs
src/Fragment/If/Rules/: Eval.hs  Infer.hs  Term.hs
src/Fragment/If/Rules/Infer/: SyntaxDirected.hs
src/Fragment/Int/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Int/Ast/: Pattern.hs  Term.hs  Type.hs
src/Fragment/Int/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Fragment/Int/Rules/Infer/: SyntaxDirected.hs
src/Fragment/IsoRec/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/IsoRec/Ast/: Error.hs  Term.hs  Type.hs
src/Fragment/IsoRec/Rules/: Term.hs  Type.hs
src/Fragment/KiArr/: Ast.hs  Helpers.hs
src/Fragment/KiArr/Ast/: Error.hs  Kind.hs
src/Fragment/KiBase/: Ast.hs  Helpers.hs
src/Fragment/KiBase/Ast/: Kind.hs
src/Fragment/LC/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/LC/Rules/: Term.hs
src/Fragment/Let/: Ast.hs  Helpers.hs
src/Fragment/Let/Ast/: Term.hs
src/Fragment/Pair/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Pair/Ast/: Error.hs  Pattern.hs  Term.hs  Type.hs
src/Fragment/Pair/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Fragment/Pair/Rules/Infer/: SyntaxDirected.hs
src/Fragment/PtVar/: Helpers.hs  Rules.hs
src/Fragment/PtVar/Rules/: Eval.hs  Infer.hs  Term.hs
src/Fragment/PtVar/Rules/Infer/: SyntaxDirected.hs
src/Fragment/PtWild/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/PtWild/Ast/: Pattern.hs
src/Fragment/PtWild/Rules/: Eval.hs  Infer.hs  Term.hs
src/Fragment/PtWild/Rules/Infer/: SyntaxDirected.hs
src/Fragment/Record/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Record/Ast/: Error.hs  Pattern.hs  Term.hs  Type.hs
src/Fragment/Record/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Fragment/Record/Rules/Infer/: SyntaxDirected.hs
src/Fragment/STLC/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/STLC/Ast/: Error.hs  Term.hs  Type.hs
src/Fragment/STLC/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Fragment/STLC/Rules/Infer/: SyntaxDirected.hs
src/Fragment/SystemF/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/SystemF/Ast/: Error.hs  Term.hs  Type.hs
src/Fragment/SystemF/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Fragment/SystemF/Rules/Infer/: SyntaxDirected.hs
src/Fragment/SystemFw/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/SystemFw/Ast/: Error.hs  Kind.hs  Term.hs  Type.hs
src/Fragment/SystemFw/Rules/: Term.hs  Type.hs
src/Fragment/TmApp/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/TmApp/Ast/: Term.hs
src/Fragment/TmApp/Rules/: Term.hs
src/Fragment/TmLam/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/TmLam/Ast/: Error.hs  Term.hs
src/Fragment/TmLam/Rules/: Term.hs
src/Fragment/TmVar/: Helpers.hs  Rules.hs
src/Fragment/TmVar/Rules/: Infer.hs
src/Fragment/TmVar/Rules/Infer/: SyntaxDirected.hs
src/Fragment/Tuple/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Tuple/Ast/: Error.hs  Pattern.hs  Term.hs  Type.hs
src/Fragment/Tuple/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Fragment/Tuple/Rules/Infer/: SyntaxDirected.hs
src/Fragment/TyAll/: Ast.hs  Helpers.hs
src/Fragment/TyAll/Ast/: Error.hs  Type.hs
src/Fragment/TyAll/Rules/: Type.hs
src/Fragment/TyArr/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/TyArr/Ast/: Error.hs  Type.hs
src/Fragment/TyArr/Rules/: Type.hs
src/Fragment/TyVar/: Helpers.hs  Rules.hs
src/Fragment/TyVar/Rules/: Type.hs
src/Fragment/Variant/: Ast.hs  Helpers.hs  Rules.hs
src/Fragment/Variant/Ast/: Error.hs  Pattern.hs  Term.hs  Type.hs
src/Fragment/Variant/Rules/: Eval.hs  Infer.hs  Term.hs  Type.hs
src/Language/: TheLot.hs
src/Rules/: Eval.hs  Infer.hs  Kind.hs  Pattern.hs  Term.hs  Type.hs  Unification.hs
src/Rules/Infer/: SyntaxDirected.hs  Unification.hs
src/Rules/Infer/Unification/: Offline.hs
src/Rules/Kind/Infer/: Common.hs  Offline.hs  SyntaxDirected.hs
src/Rules/Type/Infer/: Common.hs  Offline.hs  SyntaxDirected.hs
src/STLC/: Check.hs  Term.hs  Type.hs
src/SystemF/: Check.hs  Eval.hs  Internal.hs  Scratch.hs  Scratch2.hs  Term.hs  Type.hs
src/SystemF/Check/: Classes.hs  Run.hs
src/SystemF/Term/: Class.hs
src/SystemF/Type/: Class.hs
src/Typed/STLC/: Check.hs  Term.hs  Type.hs
src/Typed/SystemF/: Check.hs  Eval.hs  Internal.hs  Term.hs  Type.hs
src/Typed/SystemF/Check/: Classes.hs  Run.hs
src/Typed/SystemF/Term/: Class.hs
src/Typed/SystemF/Type/: Class.hs
src/Util/: MonadProxy.hs  NonEmpty.hs  Prisms.hs  TypeList.hs
(+94 files in other folders)
