name:                type-systems
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Util.Prisms
                     , Util.NonEmpty
                     , Data.Bitransversable
                     , Data.Functor.Rec
                     , Language.TheLot
                     , Ast.Type
                     , Ast.Type.Var
                     , Ast.Error
                     , Ast.Error.Common
                     , Ast.Warning
                     , Ast.Pattern
                     , Ast.Term
                     , Ast.Term.Var
                     , Context.Term
                     , Context.Term.Error
                     , Rules
                     , Rules.Eval
                     , Rules.Infer
                     , Rules.Infer.SyntaxDirected
                     , Rules.Infer.Unification
                     , Rules.Infer.Unification.Offline
                     -- , Rules.Infer.Unification.Online
                     -- , Rules.Pattern
                     , Fragment.PtVar
                     , Fragment.PtVar.Rules
                     , Fragment.PtVar.Rules.Infer.SyntaxDirected
                     , Fragment.PtVar.Rules.Infer.Unification.Offline
                     , Fragment.PtVar.Rules.Eval
                     , Fragment.PtVar.Helpers
                     , Fragment.PtWild
                     , Fragment.PtWild.Rules
                     , Fragment.PtWild.Rules.Infer.SyntaxDirected
                     , Fragment.PtWild.Rules.Infer.Unification.Offline
                     , Fragment.PtWild.Rules.Eval
                     , Fragment.PtWild.Helpers
                     , Fragment.TmVar
                     , Fragment.TmVar.Rules
                     , Fragment.TmVar.Rules.Infer.SyntaxDirected
                     , Fragment.TmVar.Rules.Infer.Unification.Offline
                     , Fragment.TmVar.Helpers
                     , Fragment.TyVar
                     , Fragment.TyVar.Helpers
                     , Fragment.Int
                     , Fragment.Int.Ast
                     , Fragment.Int.Ast.Type
                     , Fragment.Int.Ast.Pattern
                     , Fragment.Int.Ast.Term
                     , Fragment.Int.Rules
                     , Fragment.Int.Rules.Infer.SyntaxDirected
                     , Fragment.Int.Rules.Infer.Unification.Offline
                     , Fragment.Int.Rules.Eval
                     , Fragment.Int.Helpers
                     , Fragment.Bool
                     , Fragment.Bool.Ast
                     , Fragment.Bool.Ast.Type
                     , Fragment.Bool.Ast.Pattern
                     , Fragment.Bool.Ast.Term
                     , Fragment.Bool.Rules
                     , Fragment.Bool.Rules.Infer.SyntaxDirected
                     , Fragment.Bool.Rules.Infer.Unification.Offline
                     , Fragment.Bool.Rules.Eval
                     , Fragment.Bool.Helpers
                     , Fragment.If
                     , Fragment.If.Ast
                     , Fragment.If.Ast.Term
                     , Fragment.If.Rules
                     , Fragment.If.Rules.Infer.SyntaxDirected
                     , Fragment.If.Rules.Infer.Unification.Offline
                     , Fragment.If.Rules.Eval
                     , Fragment.If.Helpers
                     , Fragment.Pair
                     , Fragment.Pair.Ast
                     , Fragment.Pair.Ast.Type
                     , Fragment.Pair.Ast.Error
                     , Fragment.Pair.Ast.Pattern
                     , Fragment.Pair.Ast.Term
                     , Fragment.Pair.Rules
                     , Fragment.Pair.Rules.Infer.SyntaxDirected
                     , Fragment.Pair.Rules.Infer.Unification.Offline
                     , Fragment.Pair.Rules.Eval
                     , Fragment.Pair.Helpers
                     , Fragment.Tuple
                     , Fragment.Tuple.Ast
                     , Fragment.Tuple.Ast.Type
                     , Fragment.Tuple.Ast.Error
                     , Fragment.Tuple.Ast.Pattern
                     , Fragment.Tuple.Ast.Term
                     , Fragment.Tuple.Rules
                     , Fragment.Tuple.Rules.Infer.SyntaxDirected
                     , Fragment.Tuple.Rules.Infer.Unification.Offline
                     , Fragment.Tuple.Rules.Eval
                     , Fragment.Tuple.Helpers
                     , Fragment.Record
                     , Fragment.Record.Ast
                     , Fragment.Record.Ast.Type
                     , Fragment.Record.Ast.Error
                     , Fragment.Record.Ast.Pattern
                     , Fragment.Record.Ast.Term
                     , Fragment.Record.Rules
                     , Fragment.Record.Rules.Infer.SyntaxDirected
                     , Fragment.Record.Rules.Infer.Unification.Offline
                     , Fragment.Record.Rules.Eval
                     , Fragment.Record.Helpers
                     , Fragment.Variant
                     , Fragment.Variant.Ast
                     , Fragment.Variant.Ast.Type
                     , Fragment.Variant.Ast.Error
                     , Fragment.Variant.Ast.Pattern
                     , Fragment.Variant.Ast.Term
                     , Fragment.Variant.Rules
                     , Fragment.Variant.Rules.Infer.SyntaxDirected
                     , Fragment.Variant.Rules.Infer.Unification.Offline
                     , Fragment.Variant.Rules.Eval
                     , Fragment.Variant.Helpers
                     , Fragment.Case
                     , Fragment.Case.Ast
                     , Fragment.Case.Ast.Error
                     , Fragment.Case.Ast.Warning
                     , Fragment.Case.Ast.Term
                     , Fragment.Case.Rules
                     , Fragment.Case.Rules.Infer.SyntaxDirected
                     , Fragment.Case.Rules.Infer.Unification.Offline
                     , Fragment.Case.Rules.Eval
                     , Fragment.Case.Helpers
                     , Fragment.STLC
                     , Fragment.STLC.Ast
                     , Fragment.STLC.Ast.Type
                     , Fragment.STLC.Ast.Error
                     , Fragment.STLC.Ast.Term
                     , Fragment.STLC.Rules
                     , Fragment.STLC.Rules.Infer.SyntaxDirected
                     , Fragment.STLC.Rules.Infer.Unification.Offline
                     , Fragment.STLC.Rules.Eval
                     , Fragment.STLC.Helpers
                     , Fragment.HM
                     , Fragment.HM.Ast
                     , Fragment.HM.Ast.Type
                     , Fragment.HM.Ast.Error
                     , Fragment.HM.Ast.Term
                     , Fragment.HM.Rules
                     , Fragment.HM.Rules.Infer.Unification.Offline
                     , Fragment.HM.Rules.Eval
                     , Fragment.HM.Helpers
                     , Fragment.SystemF
                     , Fragment.SystemF.Ast
                     , Fragment.SystemF.Ast.Type
                     , Fragment.SystemF.Ast.Error
                     , Fragment.SystemF.Ast.Term
                     , Fragment.SystemF.Rules
                     , Fragment.SystemF.Rules.Infer.SyntaxDirected
                     , Fragment.SystemF.Rules.Infer.Unification.Offline
                     , Fragment.SystemF.Rules.Eval
                     , Fragment.SystemF.Helpers
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , mtl >= 2.2 && < 2.3
                     , transformers >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.6
                     , unordered-containers >= 0.2 && < 0.3
                     , errors >= 2.1 && < 2.2
                     , safe >= 0.3 && < 0.4
                     , text >= 1.2 && < 1.3
                     , semigroups >= 0.18 && < 0.19
                     , semigroupoids >= 5.1 && < 5.2
                     , lens >= 4.14 && < 4.15
                     , parsers >= 0.12 && < 0.13
                     , trifecta >= 1.6 && < 1.7
                     , ansi-wl-pprint >= 0.6 && < 0.7
                     , bound >= 1.0 && < 2.0
                     , deriving-compat >= 0.3.5 && < 0.4
                     , equivalence >= 0.3 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall
