name:                type-systems
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Util.Prisms
                     , Util.NonEmpty
                     , Data.Bitransversable
                     , Data.Functor.Rec
                     , Language.TheLot
                     , Ast.Kind
                     , Ast.Type
                     , Ast.Type.Var
                     , Ast.Error
                     , Ast.Error.Common
                     , Ast.Error.Common.Type
                     , Ast.Error.Common.Kind
                     , Ast.Warning
                     , Ast.Pattern
                     , Ast.Term
                     , Ast.Term.Var
                     , Context
                     , Context.Term
                     , Context.Term.Error
                     , Context.Type
                     , Context.Type.Error
                     , Rules
                     , Rules.Term
                     , Rules.Type
                     , Rules.Unification
                     , Rules.Type.Infer.Common
                     , Rules.Type.Infer.SyntaxDirected
                     , Rules.Type.Infer.Offline
                     -- , Rules.Type.Infer.Online
                     -- , Rules.Pattern
                     , Rules.Kind.Infer.SyntaxDirected
                     -- , Rules.Kind.Infer.Offline
                     , Fragment.PtVar
                     , Fragment.PtVar.Rules
                     , Fragment.PtVar.Rules.Type.Infer.SyntaxDirected
                     , Fragment.PtVar.Rules.Type.Infer.Offline
                     , Fragment.PtVar.Rules.Type.Infer.Common
                     , Fragment.PtVar.Rules.Term
                     , Fragment.PtVar.Helpers
                     , Fragment.PtWild
                     , Fragment.PtWild.Rules
                     , Fragment.PtWild.Rules.Type.Infer.SyntaxDirected
                     , Fragment.PtWild.Rules.Type.Infer.Offline
                     , Fragment.PtWild.Rules.Type.Infer.Common
                     , Fragment.PtWild.Rules.Term
                     , Fragment.PtWild.Helpers
                     , Fragment.TmVar
                     , Fragment.TmVar.Rules
                     , Fragment.TmVar.Rules.Type.Infer.SyntaxDirected
                     , Fragment.TmVar.Rules.Type.Infer.Offline
                     , Fragment.TmVar.Rules.Type.Infer.Common
                     , Fragment.TmVar.Helpers
                     , Fragment.TyVar
                     , Fragment.TyVar.Rules
                     , Fragment.TyVar.Rules.Type
                     , Fragment.TyVar.Rules.Kind.Infer.SyntaxDirected
                     -- , Fragment.TyVar.Rules.Kind.Infer.Offline
                     , Fragment.TyVar.Helpers
                     , Fragment.KiBase
                     , Fragment.KiBase.Ast
                     , Fragment.KiBase.Ast.Kind
                     , Fragment.KiBase.Helpers
                     , Fragment.Int
                     , Fragment.Int.Ast
                     , Fragment.Int.Ast.Type
                     , Fragment.Int.Ast.Pattern
                     , Fragment.Int.Ast.Term
                     , Fragment.Int.Rules
                     , Fragment.Int.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.Int.Rules.Type.Infer.SyntaxDirected
                     , Fragment.Int.Rules.Type.Infer.Offline
                     , Fragment.Int.Rules.Type.Infer.Common
                     , Fragment.Int.Rules.Type
                     , Fragment.Int.Rules.Term
                     , Fragment.Int.Helpers
                     , Fragment.Bool
                     , Fragment.Bool.Ast
                     , Fragment.Bool.Ast.Type
                     , Fragment.Bool.Ast.Pattern
                     , Fragment.Bool.Ast.Term
                     , Fragment.Bool.Rules
                     , Fragment.Bool.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.Bool.Rules.Type.Infer.SyntaxDirected
                     , Fragment.Bool.Rules.Type.Infer.Offline
                     , Fragment.Bool.Rules.Type.Infer.Common
                     , Fragment.Bool.Rules.Type
                     , Fragment.Bool.Rules.Term
                     , Fragment.Bool.Helpers
                     , Fragment.If
                     , Fragment.If.Ast
                     , Fragment.If.Ast.Term
                     , Fragment.If.Rules
                     , Fragment.If.Rules.Type.Infer.SyntaxDirected
                     , Fragment.If.Rules.Type.Infer.Offline
                     , Fragment.If.Rules.Type.Infer.Common
                     , Fragment.If.Rules.Term
                     , Fragment.If.Helpers
                     , Fragment.Pair
                     , Fragment.Pair.Ast
                     , Fragment.Pair.Ast.Type
                     , Fragment.Pair.Ast.Error
                     , Fragment.Pair.Ast.Pattern
                     , Fragment.Pair.Ast.Term
                     , Fragment.Pair.Rules
                     , Fragment.Pair.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.Pair.Rules.Type.Infer.SyntaxDirected
                     , Fragment.Pair.Rules.Type.Infer.Offline
                     , Fragment.Pair.Rules.Type.Infer.Common
                     , Fragment.Pair.Rules.Type
                     , Fragment.Pair.Rules.Term
                     , Fragment.Pair.Helpers
                     , Fragment.Tuple
                     , Fragment.Tuple.Ast
                     , Fragment.Tuple.Ast.Type
                     , Fragment.Tuple.Ast.Error
                     , Fragment.Tuple.Ast.Pattern
                     , Fragment.Tuple.Ast.Term
                     , Fragment.Tuple.Rules
                     , Fragment.Tuple.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.Tuple.Rules.Type.Infer.SyntaxDirected
                     , Fragment.Tuple.Rules.Type.Infer.Offline
                     , Fragment.Tuple.Rules.Type.Infer.Common
                     , Fragment.Tuple.Rules.Type
                     , Fragment.Tuple.Rules.Term
                     , Fragment.Tuple.Helpers
                     , Fragment.Record
                     , Fragment.Record.Ast
                     , Fragment.Record.Ast.Type
                     , Fragment.Record.Ast.Error
                     , Fragment.Record.Ast.Pattern
                     , Fragment.Record.Ast.Term
                     , Fragment.Record.Rules
                     , Fragment.Record.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.Record.Rules.Type.Infer.SyntaxDirected
                     , Fragment.Record.Rules.Type.Infer.Offline
                     , Fragment.Record.Rules.Type.Infer.Common
                     , Fragment.Record.Rules.Type
                     , Fragment.Record.Rules.Term
                     , Fragment.Record.Helpers
                     , Fragment.Variant
                     , Fragment.Variant.Ast
                     , Fragment.Variant.Ast.Type
                     , Fragment.Variant.Ast.Error
                     , Fragment.Variant.Ast.Pattern
                     , Fragment.Variant.Ast.Term
                     , Fragment.Variant.Rules
                     , Fragment.Variant.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.Variant.Rules.Type.Infer.SyntaxDirected
                     , Fragment.Variant.Rules.Type.Infer.Offline
                     , Fragment.Variant.Rules.Type.Infer.Common
                     , Fragment.Variant.Rules.Type
                     , Fragment.Variant.Rules.Term
                     , Fragment.Variant.Helpers
                     , Fragment.Case
                     , Fragment.Case.Ast
                     , Fragment.Case.Ast.Error
                     , Fragment.Case.Ast.Warning
                     , Fragment.Case.Ast.Term
                     , Fragment.Case.Rules
                     , Fragment.Case.Rules.Type.Infer.SyntaxDirected
                     , Fragment.Case.Rules.Type.Infer.Offline
                     , Fragment.Case.Rules.Type.Infer.Common
                     , Fragment.Case.Rules.Term
                     , Fragment.Case.Helpers
                     -- , Fragment.IsoRec
                     , Fragment.IsoRec.Ast
                     , Fragment.IsoRec.Ast.Type
                     , Fragment.IsoRec.Ast.Error
                     , Fragment.IsoRec.Ast.Term
                     -- , Fragment.IsoRec.Rules
                     -- , Fragment.IsoRec.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.IsoRec.Rules.Type.Infer.SyntaxDirected
                     , Fragment.IsoRec.Rules.Type
                     , Fragment.IsoRec.Rules.Term
                     , Fragment.IsoRec.Helpers
                     , Fragment.STLC
                     , Fragment.STLC.Ast
                     , Fragment.STLC.Ast.Type
                     , Fragment.STLC.Ast.Error
                     , Fragment.STLC.Ast.Term
                     , Fragment.STLC.Rules
                     , Fragment.STLC.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.STLC.Rules.Type.Infer.SyntaxDirected
                     , Fragment.STLC.Rules.Type
                     , Fragment.STLC.Rules.Term
                     , Fragment.STLC.Helpers
                     , Fragment.HM
                     , Fragment.HM.Ast
                     , Fragment.HM.Ast.Type
                     , Fragment.HM.Ast.Error
                     , Fragment.HM.Ast.Term
                     , Fragment.HM.Rules
                     , Fragment.HM.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.HM.Rules.Type.Infer.Offline
                     , Fragment.HM.Rules.Type
                     , Fragment.HM.Rules.Term
                     , Fragment.HM.Helpers
                     , Fragment.SystemF
                     , Fragment.SystemF.Ast
                     , Fragment.SystemF.Ast.Type
                     , Fragment.SystemF.Ast.Error
                     , Fragment.SystemF.Ast.Term
                     , Fragment.SystemF.Rules
                     , Fragment.SystemF.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.SystemF.Rules.Type.Infer.SyntaxDirected
                     , Fragment.SystemF.Rules.Type
                     , Fragment.SystemF.Rules.Term
                     , Fragment.SystemF.Helpers
                     , Fragment.SystemFw.Ast
                     , Fragment.SystemFw.Ast.Kind
                     , Fragment.SystemFw.Ast.Type
                     , Fragment.SystemFw.Ast.Error
                     , Fragment.SystemFw.Ast.Term
                     , Fragment.SystemFw.Rules
                     , Fragment.SystemFw.Rules.Kind.Infer.SyntaxDirected
                     , Fragment.SystemFw.Rules.Type.Infer.SyntaxDirected
                     , Fragment.SystemFw.Rules.Type
                     , Fragment.SystemFw.Rules.Term
                     , Fragment.SystemFw.Helpers
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , mtl >= 2.2 && < 2.3
                     , transformers >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.6
                     , unordered-containers >= 0.2 && < 0.3
                     , errors >= 2.1 && < 2.2
                     , safe >= 0.3 && < 0.4
                     , text >= 1.2 && < 1.3
                     , semigroups >= 0.18 && < 0.19
                     , semigroupoids >= 5.1 && < 5.2
                     , lens >= 4.14 && < 4.15
                     , parsers >= 0.12 && < 0.13
                     , trifecta >= 1.6 && < 1.7
                     , ansi-wl-pprint >= 0.6 && < 0.7
                     , bound >= 1.0 && < 2.0
                     , deriving-compat >= 0.3.5 && < 0.4
                     , equivalence >= 0.3 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall
